css - used flexbox for piano to prevent overflow

--- a/src/scss/chorus.framework.scss
+++ b/src/scss/chorus.framework.scss
@@ -31,7 +31,7 @@ $display-width: 1250;
   width: 100%;
   max-width: 100%;
   overflow-x: scroll;
-  margin: 10px 0;
+  margin: 0 0 10px 0;
   position: relative;
 }
 
@@ -56,7 +56,9 @@ $display-width: 1250;
     }
     &:hover, &.chorus-result-item-selected {
       background-color: black;
-      color: white;
+      span {
+        color: white;
+      }
     }
   }
   span {
@@ -152,6 +154,7 @@ $display-width: 1250;
   position: relative;
   height: 500px;
   max-width: 100%;
+  display: flex;
 }
 
 .chorus-piano-key {
@@ -171,7 +174,7 @@ $display-width: 1250;
     border-top: 1px solid black;
     border-bottom: 1px solid black;
     border-right: 1px solid black;
-    width: 14.15%;
+    width: unquote((100/7)+'%');
     vertical-align: bottom;
     float: left;
     &:first-child {
@@ -188,7 +191,7 @@ $display-width: 1250;
     span {
       color: white;
     }
-    z-index: 1000;
+    z-index: 10;
     &[data-chorus-tone="4"] {
       left: unquote($whiteKeyWidth*1+'%');
     }
